    Delete entries older than the given number of days (starting from the beginning of the day).
    Can't be used alongside `--max-entries-to-keep` or `--cleanup-threshold`!
  * audit log entries of `/admin/login` and `admin/logout` now state `success`, `user`, `realm` and `administrator` correctly
  * improved debug log output for TOTP resync routine

  Fix:
  * wrongly aligned resize bar on Manage UI flexigrid tables when browser is zoomed or scaled
  * when rolling out a forwarding token via /manage, the serial of the target token is included in the description 
  * faulty JWTs don't cause a `500 Internal Server Error` anymore and the error gets logged properly

 -- LinOTP Packaging <packaging@linotp.de>  Mon, 08 Apr 2024 10:00:00 +0200

linotp (3.3.2-1) buster; urgency=low

  Fix:
    * migration to 3.0.0 no longer fails (due to missing arg)

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 19 Jun 2024 10:00:00 +0200

linotp (3.3.1-1) buster; urgency=low

  * fix unbound variable in containers `entrypoint.sh`

 -- LinOTP Packaging <packaging@linotp.de>  Tue, 18 Jun 2024 10:00:00 +0200

linotp (3.3-1) buster; urgency=low

  Breaking Changes:
  * Renamed the following config variables and some changed their defaults:
    * `LOGGING_FILE_LEVEL` -> `LOG_FILE_LEVEL`
      * default: `WARNING` -> `DEBUG`
    * `LOGGING_CONSOLE_LEVEL` -> `LOG_CONSOLE_LEVEL`
      * default: `WARNING` -> `DEBUG`
    * `LOGGING_SQLALCHEMY_LEVEL` -> `LOG_LEVEL_DB_CLIENT`
    * `LOGGING` -> `LOG_CONFIG`
  * default of `LOGGING_LEVEL` changed from `INFO` to `WARNING`
  * when migrating from LinOTP 2.x, the audit log is no longer truncated to circumvent issues with
    privileges in different database handlers. Old audit log entries that are not truncated now,
    are reported to have a failing signature check because the method has changed with LinOTP version 3.0.

  Deprecations:
  * In the future config variable `LOGGING_LEVEL` will be replaced by `LOG_LEVEL`.